# blokus

backend/: board.cpp  board.h
gtp/: CMakeLists.txt  Main.cpp  README
